--- a/calculator.html
+++ b/calculator.html
@@ -100,7 +100,7 @@
 <!-- create table -->
 <body> 
 	<div class="main">
-	<div class = "title" >Calculator</div> 
+	<div class = "title" >Simple Calculator</div> 
 	<table border="1"> 
 		<tr> 
 			<td colspan="3"><input type="text" id="result"/></td> 
